--- a/api-spec/WFS3-core.yaml
+++ b/api-spec/WFS3-core.yaml
@@ -107,15 +107,17 @@ paths:
             text/html:
               schema:
                 type: string
-  '/collections/{name}':
+  '/collections/{collectionId}':
     get:
-      summary: describe the {name} feature collection
+      summary: 'describe the {name} feature collection'
       operationId: describeCollection
       tags:
         - Capabilities
+      parameters:
+      - $ref: '#/components/parameters/collectionId'
       responses:
         '200':
-          description: Metadata about the {name} collection shared by this API.
+          description: 'Metadata about the {name} collection shared by this API.'
           content:
             application/json:
               schema:
@@ -132,9 +134,9 @@ paths:
             text/html:
               schema:
                 type: string
-  '/collections/{name}/items':
+  '/collections/{collectionId}/items':
     get:
-      summary: retrieve {name} features
+      summary: 'retrieve {collectionId} features'
       description: >-
         Every feature in a dataset belongs to a collection. A dataset may
         consist of multiple feature collections. A feature collection is often a
@@ -145,8 +147,9 @@ paths:
       tags:
         - Features
       parameters:
-        - $ref: '#/components/parameters/limit'
-        - $ref: '#/components/parameters/bbox'
+      - $ref: '#/components/parameters/collectionId'
+      - $ref: '#/components/parameters/limit'
+      - $ref: '#/components/parameters/bbox'
       responses:
         '200':
           description: >-
@@ -168,14 +171,15 @@ paths:
             text/html:
               schema:
                 type: string
-  '/collections/{name}/items/{fid}':
+  '/collections/{collectionId}/items/{featureId}':
     get:
       summary: retrieve a feature; use content negotiation to request HTML or GeoJSON
       operationId: getFeature
       tags:
         - Features
       parameters:
-        - $ref: '#/components/parameters/id'
+      - $ref: '#/components/parameters/collectionId'
+      - $ref: '#/components/parameters/featureId'
       responses:
         '200':
           description: A feature.
@@ -222,8 +226,9 @@ components:
     bbox:
       name: bbox
       in: query
-      description: |
-        Only features that have a geometry that intersects the bounding box are selected. The bounding box is provided as four numbers: 
+      description: >
+        Only features that have a geometry that intersects the bounding box are
+        selected. The bounding box is provided as four numbers: 
         * Lower left corner, coordinate axis 1
         * Lower left corner, coordinate axis 2 
         * Lower left corner, coordinate axis 3 (optional)        
@@ -247,10 +252,17 @@ components:
           maximum: 180
       style: form
       explode: false
-    id:
-      name: id
+    collectionId:
+      name: collectionId
       in: path
-      description: The id of a feature
+      required: true
+      description: ID (name) of a specific collection
+      schema:
+        type: string
+    featureId:
+      name: featureId
+      in: path
+      description: ID of a specific feature
       required: true
       schema:
         type: string
@@ -272,12 +284,24 @@ components:
         links:
           type: array
           items:
-            $ref: '#/components/schema/link'
+            $ref: '#/components/schemas/link'
           example:
-            - { "href": "http://data.example.org/", "rel": "self", "type": "application/json", "title": "this document" }
-            - { "href": "http://data.example.org/api", "rel": "service", "type": "application/openapi+json;version=3.0","title": "the API definition" }
-            - { "href": "http://data.example.org/conformance", "rel": "conformance", "type": "application/json", "title": "WFS 3.0 conformance classes implemented by this server" }
-            - { "href": "http://data.example.org/collections", "rel": "data", "type": "application/json", "title": "Metadata about the feature collections" }           
+            - href: 'http://data.example.org/'
+              rel: self
+              type: application/json
+              title: this document
+            - href: 'http://data.example.org/api'
+              rel: service
+              type: application/openapi+json;version=3.0
+              title: the API definition
+            - href: 'http://data.example.org/conformance'
+              rel: conformance
+              type: application/json
+              title: WFS 3.0 conformance classes implemented by this server
+            - href: 'http://data.example.org/collections'
+              rel: data
+              type: application/json
+              title: Metadata about the feature collections
     req-classes:
       type: object
       required:
@@ -292,6 +316,22 @@ components:
             - 'http://www.opengis.net/spec/wfs-1/3.0/req/oas30'
             - 'http://www.opengis.net/spec/wfs-1/3.0/req/html'
             - 'http://www.opengis.net/spec/wfs-1/3.0/req/geojson'
+    link:
+      type: object
+      required:
+        - href
+      properties:
+        href:
+          type: string
+        rel:
+          type: string
+          example: prev
+        type:
+          type: string
+          example: application/geo+json
+        hreflang:
+          type: string
+          example: en
     content:
       type: object
       required:
@@ -302,10 +342,19 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/link'
-          example: 
-            - { "href": "http://data.example.org/collections.json", "rel": "self", "type": "application/json", "title": "this document" }
-            - { "href": "http://data.example.org/collections.html", "rel": "alternate", "type": "text/html", "title": "this document as HTML" }
-            - { "href": "http://schemas.example.org/1.0/foobar.xsd", "rel": "describedBy", "type": "application/xml", "title": "XML schema for Acme Corporation data" }          
+          example:
+            - href: 'http://data.example.org/collections.json'
+              rel: self
+              type: application/json
+              title: this document
+            - href: 'http://data.example.org/collections.html'
+              rel: alternate
+              type: text/html
+              title: this document as HTML
+            - href: 'http://schemas.example.org/1.0/foobar.xsd'
+              rel: describedBy
+              type: application/xml
+              title: XML schema for Acme Corporation data
         collections:
           type: array
           items:
@@ -317,36 +366,41 @@ components:
         - links
       properties:
         name:
-          description: identifier of the collection used, for example, in URIs
+          description: 'identifier of the collection used, for example, in URIs'
           type: string
-          example: 'buildings'
+          example: buildings
         title:
           description: human readable title of the collection
           type: string
-          example: 'Buildings'
+          example: Buildings
         description:
           description: a description of the features in the collection
           type: string
-          example: 'Buildings in the city of Bonn.'
+          example: Buildings in the city of Bonn.
         links:
           type: array
           items:
             $ref: '#/components/schemas/link'
-          example: 
-            - { "href": "http://data.example.org/collections/buildings/items", "rel": "item", "type": "application/geo+json",
-          "title": "Buildings" }
-            - { "href": "http://example.org/concepts/building.html", "rel": "describedBy", "type": "text/html",
-          "title": "Feature catalogue for buildings" }          
+          example:
+            - href: 'http://data.example.org/collections/buildings/items'
+              rel: item
+              type: application/geo+json
+              title: Buildings
+            - href: 'http://example.org/concepts/building.html'
+              rel: describedBy
+              type: text/html
+              title: Feature catalogue for buildings
         extent:
           $ref: '#/components/schemas/bbox'
         crs:
-          description: >- 
-            the list of coordinate reference systems supported by the service; the first item is the default coordinate reference system
+          description: >-
+            the list of coordinate reference systems supported by the service;
+            the first item is the default coordinate reference system
           type: array
           items:
             type: string
           default:
-            - http://www.opengis.net/def/crs/OGC/1.3/CRS84
+            - 'http://www.opengis.net/def/crs/OGC/1.3/CRS84'
     bbox:
       type: object
       required:
