--- a/extensions/transaction/WFS3core+STAC+extensions.yaml
+++ b/extensions/transaction/WFS3core+STAC+extensions.yaml
@@ -960,7 +960,7 @@ components:
           default: 'http://www.opengis.net/def/crs/OGC/1.3/CRS84'
         spatial:
           description: >-
-            West, north, east, south edges of the spatial extent. The minimum
+            West, south, east, north edges of the spatial extent. The minimum
             and maximum values apply to the coordinate reference system WGS84
             longitude/latitude that is supported in the Core. If, for example, a
             projected coordinate reference system is used, the minimum and
