--- a/api-spec/STAC.yaml
+++ b/api-spec/STAC.yaml
@@ -931,7 +931,10 @@ components:
         An array of links to resources related to this collection.
       items:
         $ref: '#/components/schemas/link'
-
+      example:
+        - rel: next
+          href: >-
+            http://api.cool-sat.com/stac/search?next=ANsXtp9mrqN0yrKWhf-y2PUpHRLQb1GT-mtxNcXou8TwkXhi1Jbk
 servers:
   - url: 'http://dev.cool-sat.com'
     description: Development server
