--- a/api-spec/extensions/query/query.fragment.yaml
+++ b/api-spec/extensions/query/query.fragment.yaml
@@ -30,9 +30,11 @@ components:
       example:
         eo:cloud_cover:
           lt: 50
-        providers: Planet
+        providers:
+          eq: 'Planet'
         published:
-          date: '2018-02-12T00:00:00Z/2018-03-18T12:31:12Z'
+          gt: '2018-02-12T00:00:00Z'
+          lte: '2018-03-18T12:31:12Z'
         pl:item_type:
           startsWith: PSScene
     queryProp:
@@ -67,5 +69,3 @@ components:
             contains:
               type: string
               description: Find items with a property that contains with the specified string. A case-insensitive comparison must be performed.
-            time:
-              $ref: '#/components/schemas/time'
