--- a/api-spec/extensions/query/query.fragment.yaml
+++ b/api-spec/extensions/query/query.fragment.yaml
@@ -35,6 +35,11 @@ components:
           date: '2018-02-12T00:00:00Z/2018-03-18T12:31:12Z'
         pl:item_type:
           startsWith: PSScene
+        product:
+          in:
+            - foo
+            - bar
+            - baz
     queryProp:
       description: Apply query operations to a specific property
       anyOf:
@@ -67,5 +72,10 @@ components:
             contains:
               type: string
               description: Find items with a property that contains with the specified string. A case-insensitive comparison must be performed.
+            in:
+              type: array
+              items:
+                type: string
+              description: Find items with a property that matches one of the specified strings. A case-insensitive comparison must be performed.
             time:
               $ref: '#/components/schemas/time'
