--- a/api-spec/STAC-extensions.yaml
+++ b/api-spec/STAC-extensions.yaml
@@ -339,7 +339,7 @@ paths:
         - $ref: '#/components/parameters/bbox'
         - $ref: '#/components/parameters/datetime'
         - $ref: '#/components/parameters/limit'
-        - $ref: '#/components/parameters/page'
+        - $ref: '#/components/parameters/next'
         - $ref: '#/components/parameters/ids'
         - $ref: '#/components/parameters/collections'
         - $ref: '#/components/parameters/query'
@@ -407,58 +407,8 @@ components:
     bbox:
       name: bbox
       in: query
-      description: >-
-        Only features that have a geometry that intersects the bounding box are
-        selected.
-
-        The bounding box is provided as four or six numbers, depending on
-        whether the
-
-        coordinate reference system includes a vertical axis (elevation or
-        depth):
-
-
-        * Lower left corner, coordinate axis 1
-
-        * Lower left corner, coordinate axis 2
-
-        * Lower left corner, coordinate axis 3 (optional)
-
-        * Upper right corner, coordinate axis 1
-
-        * Upper right corner, coordinate axis 2
-
-        * Upper right corner, coordinate axis 3 (optional)
-
-
-        The coordinate reference system of the values is WGS 84
-        longitude/latitude
-
-        (http://www.opengis.net/def/crs/OGC/1.3/CRS84) unless a different
-        coordinate
-
-        reference system is specified in the parameter `bbox-crs`.
-
-
-        For WGS 84 longitude/latitude the values are in most cases the sequence
-        of
-
-        minimum longitude, minimum latitude, maximum longitude and maximum
-        latitude.
-
-        However, in cases where the box spans the antimeridian the first value
-
-        (west-most box edge) is larger than the third value (east-most box
-        edge).
-
-
-        If a feature has multiple spatial geometry properties, it is the
-        decision of the
-
-        server whether only a single spatial geometry property is used to
-        determine
-
-        the extent or all relevant geometries.
+      description:
+        $ref: '#/components/schemas/bbox/description'
       required: false
       schema:
         type: array
@@ -466,6 +416,7 @@ components:
         maxItems: 6
         items:
           type: number
+        $ref: '#/components/schemas/bbox'
       style: form
       explode: false
     collectionId:
@@ -478,36 +429,12 @@ components:
     datetime:
       name: datetime
       in: query
-      description: >-
-        Either a date-time or an interval, open or closed. Date and time
-        expressions
-
-        adhere to RFC 3339. Open intervals are expressed using double-dots.
-
-
-        Examples:
-
-
-        * A date-time: "2018-02-12T23:20:50Z"
-
-        * A closed interval: "2018-02-12T00:00:00Z/2018-03-18T12:31:12Z"
-
-        * Open intervals: "2018-02-12T00:00:00Z/.." or "../2018-03-18T12:31:12Z"
-
-
-        Only features that have a temporal property that intersects the value of
-
-        `datetime` are selected.
-
-
-        If a feature has multiple temporal properties, it is the decision of the
-
-        server whether only a single temporal property is used to determine
-
-        the extent or all relevant temporal properties.
+      description:
+        $ref: '#/components/schemas/datetime/description'
       required: false
       schema:
         type: string
+        $ref: '#/components/schemas/datetime'
       style: form
       explode: false
     featureId:
@@ -520,76 +447,43 @@ components:
     limit:
       name: limit
       in: query
-      description: >-
-        The optional limit parameter limits the number of items that are
-        presented in the response document.
-
-
-        Only items are counted that are on the first level of the collection in
-        the response document.
-
-        Nested objects contained within the explicitly requested items shall not
-        be counted.
-
-
-        Minimum = 1. Maximum = 10000. Default = 10.
+      description:
+        $ref: '#/components/schemas/limit/description'
       required: false
       schema:
         type: integer
         minimum: 1
         maximum: 10000
         default: 10
+        $ref: '#/components/schemas/limit'
       style: form
       explode: false
-    page:
-      name: page
+    next:
+      name: next
       in: query
-      description: |
-        The optional page parameter returns the specified page of results
-        (with each page having size=limit).
-
-        * Minimum = 1
-        * Default = 1
+      description:
+        $ref: '#/components/schemas/next/description'
       required: false
       schema:
-        type: integer
-        minimum: 1
-        default: 1
+        $ref: '#/components/schemas/next'
       style: form
-      explode: false
     ids:
       name: ids
       in: query
-      description: >
-        The optional ids parameter returns a FeatureCollection of all matching
-        ids.
-
-        If provided all other parameters that further restrict the number of
-        search results (except `page` and `limit`) will be ignored.
+      description:
+        $ref: '#/components/schemas/ids/description'
       required: false
       schema:
-        type: array
-        minItems: 1
-        items:
-          type: string
+        $ref: '#/components/schemas/ids'
       explode: false
     collections:
       name: collections
       in: query
-      description: >
-        The collections search parameter is a list of of collection IDs for
-        Items to match.
-
-        Only items that are included in one of these collections will be
-        returned, otherwise
-
-        all collections will be searched.
+      description:
+        $ref: '#/components/schemas/collections/description'
       required: false
       schema:
-        type: array
-        minItems: 1
-        items:
-          type: string
+        $ref: '#/components/schemas/collections'
       explode: false
     query:
       name: query
@@ -678,7 +572,7 @@ components:
             - 'http://www.opengis.net/def/crs/OGC/1.3/CRS84'
             - 'http://www.opengis.net/def/crs/EPSG/0/4326'
     collections:
-      type: object
+      type: array
       required:
         - links
         - collections
@@ -691,6 +585,11 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/collection'
+      description: |
+        Array of Collection IDs to include in the search for items.
+        Only Items in one of the provided Collections will be searched
+      items:
+        type: string
     confClasses:
       type: object
       required:
@@ -1072,14 +971,23 @@ components:
         - $ref: '#/components/schemas/bboxFilter'
         - $ref: '#/components/schemas/datetimeFilter'
         - $ref: '#/components/schemas/intersectsFilter'
-        - type: object
-          properties:
-            limit:
-              type: integer
-              example: 10
+        - $ref: '#/components/schemas/nextFilter'
+        - $ref: '#/components/schemas/collectionsFilter'
+        - $ref: '#/components/schemas/idsFilter'
+        - $ref: '#/components/schemas/limitFilter'
         - $ref: '#/components/schemas/queryFilter'
         - $ref: '#/components/schemas/sortFilter'
         - $ref: '#/components/schemas/fieldsFilter'
+    next:
+      type: string
+      description: >-
+        The token to retrieve the next set of results, e.g., offset, page,
+        continuation token
+      default: null
+    limit:
+      type: integer
+      example: 10
+      description: The maximum number of results to return (page size). Defaults to 10
     bbox:
       description: |
         Only features that have a geometry that intersects the bounding box are
@@ -1125,6 +1033,15 @@ components:
       properties:
         bbox:
           $ref: '#/components/schemas/bbox'
+    ids:
+      type: array
+      description: >
+        Array of Item ids to return. All other filter parameters that further
+        restrict the number of 
+
+        search results (except `next` and `limit`) are ignored
+      items:
+        type: string
     datetimeFilter:
       description: An object representing a date+time based filter.
       type: object
@@ -1137,6 +1054,30 @@ components:
       properties:
         intersects:
           $ref: 'https://geojson.org/schema/Geometry.json'
+    limitFilter:
+      type: object
+      description: Only returns maximum number of results (page size)
+      properties:
+        limit:
+          $ref: '#/components/schemas/limit'
+    nextFilter:
+      type: object
+      description: Only returns the next set of results
+      properties:
+        next:
+          $ref: '#/components/schemas/next'
+    idsFilter:
+      type: object
+      description: Only returns items that match the array of given ids
+      properties:
+        ids:
+          $ref: '#/components/schemas/ids'
+    collectionsFilter:
+      type: object
+      description: Only returns the collections specified
+      properties:
+        collections:
+          $ref: '#/components/schemas/collections'
     datetime:
       type: string
       description: >-
