--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,23 +1,16 @@
 version: 2
 jobs:
-  build:
+  test_examples:
     working_directory: ~/stac
     docker:
       - image: circleci/python:3.7
-
     steps:
       - checkout
       - run: sudo chown -R circleci:circleci /usr/local/bin
       - run: sudo chown -R circleci:circleci /usr/local/lib/python3.7/site-packages
       - run:
           name: install
-          command: |
-            pip install stac-validator
-            sudo apt-get update
-            sudo apt-get install curl -y software-properties-common
-            curl -sL https://deb.nodesource.com/setup_13.x | sudo -E bash -
-            sudo apt-get install -y nodejs
-            sudo npm install -g remark-cli remark-validate-links remark-lint remark-preset-lint-markdown-style-guide
+          command: pip install stac-validator
       - run:
           name: validate
           command: |
@@ -30,4 +23,21 @@ jobs:
             stac_validator item-spec/examples/landsat8-sample.json
             stac_validator item-spec/examples/digitalglobe-sample.json
             stac_validator item-spec/examples/CBERS_4_MUX_20181029_177_106_L4.json
-            remark . -f -r .circleci/.remarkrc
+  test_docs:
+    working_directory: ~/stac
+    docker:
+      - image: circleci/node:12
+    steps:
+      - checkout
+      - run:
+          name: install
+          command: npm install
+      - run:
+          name: validate
+          command: npm run check-markdown
+workflows:
+  version: 2
+  test:
+    jobs:
+      - test_examples
+      - test_docs
