--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "remark-preset-lint-consistent": "^3.0.0",
     "remark-preset-lint-markdown-style-guide": "^3.0.0",
     "remark-preset-lint-recommended": "^4.0.0",
-    "remark-validate-links": "^10.0.0",
-    "stac-node-validator": "^0.2.1"
+    "remark-validate-links": "^10.0.0"
   }
 }
