--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "repository": "https://github.com/radiantearth/stac-spec",
   "license": "Apache-2.0",
   "scripts": {
+    "check": "npm run check-markdown && npm run check-examples",
     "check-markdown": "remark . -f -r .circleci/rc.yaml",
+    "check-examples": "stac-node-validator . --lint --verbose",
+    "format-examples": "stac-node-validator . --format",
     "publish-schemas": "node .circleci/publish-schemas.js"
   },
   "dependencies": {
@@ -17,6 +20,7 @@
     "remark-preset-lint-consistent": "^3.0.0",
     "remark-preset-lint-markdown-style-guide": "^3.0.0",
     "remark-preset-lint-recommended": "^4.0.0",
-    "remark-validate-links": "^10.0.0"
+    "remark-validate-links": "^10.0.0",
+    "stac-node-validator": "^0.4.6"
   }
 }
