--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ workflows:
   ci:
     jobs:
       - test_examples_node
-      - test_examples_python   
+      # - test_examples_python   
       - test_docs
       - publish_schemas:
           filters:
